# tech_paws_buffers_generator

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: ast.rs  consts_ast_new.rs  dart_generator.rs  lexer.rs  main.rs  parser.rs  rust_generator.rs  writer.rs
src/dart/: consts.rs  enum_emplace_buffers.rs  enum_into_buffers.rs  enum_models.rs  generator.rs  ir.rs  mod.rs  rpc.rs  struct_emplace_to_buffers.rs  struct_into_buffers.rs  struct_into_to_buffers.rs
src/kotlin/: consts.rs  generator.rs  ir.rs  types.rs
src/rust/: consts.rs  enum_buffers.rs  enum_models.rs  mod.rs  rpc.rs  struct_buffers.rs  struct_models.rs
src/swift/: consts.rs  generator.rs  generator_tokens.rs  ir.rs  mod.rs  models.rs  types.rs
src/test_resources/: empty_struct.ast
test_resources/: complex.ast  complex.tpb  consts.ast  consts.tpb  consts_new.tpb  directive.ast  directive.tpb  doc_comments.ast  doc_comments.tpb  empty.ast  empty.tpb  empty_struct.ast  enum.ast  enum.tpb  enum_basic.tpb  enum_complex.ast  enum_complex.tpb  enum_extended.tpb  enum_value.ast  enum_value.tpb  enum_with_many_default_arguments.tpb  enum_with_named_default_arguments.tpb  enum_with_positions.tpb  rpc_async_methods.tpb  rpc_method.ast  rpc_method.tpb  rpc_method_without_ret.ast  rpc_method_without_ret.tpb  rpc_methods.ast  rpc_methods.tpb  rpc_read_async_methods.tpb  rpc_read_methods.tpb  rpc_read_sync_methods.tpb  rpc_stream_methods.tpb  rpc_sync_methods.tpb  struct.ast  struct.tpb  struct_basic.tpb  struct_basic_emplace.tpb  struct_empty.tpb  (+10 more)
test_resources/dart/: consts.dart  empty.dart  (+20 more)
(+54 files in other folders)
