[package]
name = "tech_paws_buffers"
version = "0.1.0"
edition = "2021"

[dependencies]
convert_case = "0.5.0"
clap = { version = "3.2.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.4"
env_logger = "0.8.2"
log = "0.4.13"
strum = "0.26"
strum_macros = "0.26"
